Написаны базовые css стили

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,10 +1,29 @@
+// Переменные
+$main-color: #000000;
+$second-color: #283136;
+
 // Глобальные стили
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
 
 html {
   box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+
+  font-family: "Roboto", "Arial", sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 300;
+  color: $main-color;
+  
+  background-color: #ffffff;
 }
 
 img {
@@ -14,6 +33,7 @@ img {
 a {
   text-decoration: none;
 }
+
 // Дополнительные стили
 .visually-hidden {
   position: absolute;
@@ -26,4 +46,21 @@ a {
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
   overflow: hidden;
+}
+
+.button {
+  padding: 0;
+
+  font: inherit;
+
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 400;
+  text-align: center;
+  vertical-align: middle;
+  text-transform: uppercase;
+  color: #ffffff;
+
+  border: none;
+  background-color: #fb565a;
 }
