Разбил scss на модули

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,388 +1,4 @@
-// Переменные
-$main-color: #000000;
-$second-color: #283136;
-
-// Глобальные стили
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-
-html {
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-
-  font-family: "Roboto", "Arial", sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 300;
-  color: $main-color;
-
-  background-color: #ffffff;
-}
-
-img {
-  max-width: 100%;
-}
-
-a {
-  text-decoration: none;
-}
-
-// Дополнительные стили
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.button {
-  padding: 0;
-
-  font: inherit;
-
-  font-size: 16px;
-  line-height: 18px;
-  font-weight: 400;
-  text-align: center;
-  vertical-align: middle;
-  text-transform: uppercase;
-  color: #ffffff;
-
-  border: none;
-  background-color: #fb565a;
-}
-
-// Шапка
-.header {
-  background-color: #eeeeee;
-}
-
-// Верхняя панель
-.header__top {
-  font-size: 16px;
-  line-height: 30px;
-  font-weight: 700;
-  text-transform: uppercase;
-}
-
-// Навигация
-.navigation {
-  &__list {
-    margin: 0;
-    padding: 0;
-
-    list-style: none;
-  }
-
-  &__link {
-    color: $main-color;
-  }
-}
-
-// Корзина
-.cart {
-  &__link {
-    color: $main-color;
-  }
-}
-
-// Нижняя панель
-
-// Преимущества
-.advantages {
-  &__list {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-  }
-
-  &__title {
-    font-size: 55px;
-    line-height: 55px;
-    font-weight: 400;
-  }
-
-  &__description {
-    font-size: 16px;
-    line-height: 24px;
-    color: $second-color;
-  }
-}
-
-// Основной контент
-
-// Услуги
-.services {
-  &__list {
-    margin: 0;
-    padding: 0;
-
-    list-style: none;
-  }
-
-  &__title {
-    font-size: 24px;
-    line-height: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-
-  &__description {
-    font-size: 16px;
-    line-height: 24px;
-    color: $second-color;
-  }
-}
-
-// Студия
-.studio {
-  &__title {
-    font-size: 45px;
-    line-height: 45px;
-    font-weight: 400;
-  }
-
-  &__description {
-    font-size: 16px;
-    line-height: 24px;
-    color: $second-color;
-  }
-
-  // О нас
-  &__services {
-    &-title {
-      font-size: 16px;
-      line-height: 24px;
-      font-weight: 700;
-      text-transform: uppercase;
-    }
-
-    &-text {
-      display: block;
-
-      color: $second-color;
-    }
-  }
-
-  // Статистика студии
-  &__stats {
-    &-title {
-      font-weight: 700;
-      text-transform: uppercase;
-    }
-
-    &-percent {
-      font-size: 45px;
-      line-height: 10px;
-    }
-
-    &-text {
-      line-height: 18px;
-      color: $second-color;
-    }
-  }
-}
-
-// Контакты
-.contacts {
-  &__name {
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 700;
-  }
-
-  &__address {
-    line-height: 18px;
-    color: #666666;
-  }
-
-  &__phone {
-    line-height: 18px;
-    color: #666666;
-  }
-}
-
-// Футер
-.footer {
-  &__title {
-    font-size: 36px;
-    line-height: 36px;
-    font-weight: 700;
-  }
-
-  &__text {
-    font-size: 16px;
-    line-height: 22px;
-    color: #444444;
-  }
-}
-
-// Модальные окна
-
-// Попап
-.popup {
-  &__title {
-    font-size: 45px;
-    line-height: 45px;
-  }
-}
-
-// Форма обратной связи
-.feedback {
-  &__label {
-    font-size: 16px;
-    line-height: 18px;
-    font-weight: 700;
-    color: $main-color;
-  }
-}
-
-// Страница каталога
-
-// Шапка
-
-// Нижняя панель
-.header__page-title {
-  font-size: 55px;
-  line-height: 55px;
-  font-weight: 400;
-}
-
-// Основной контент
-
-// Каталог товаров
-
-// Фильтр товаров
-.filter {
-  &__field {
-    margin: 0;
-    padding: 0;
-
-    border: none;
-  }
-
-  &__title {
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-
-  &__list {
-    margin: 0;
-    padding: 0;
-
-    list-style: none;
-  }
-
-  &__label {
-    font-size: 16px;
-    line-height: 20px;
-    color: $second-color;
-  }
-
-  &__button {
-    font-size: 16px;
-    line-height: 18px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: $main-color;
-
-    background-color: #eeeeee;
-    border: none;
-  }
-}
-
-// Счетчик цены
-.value-range {
-  &__label {
-    font-size: 16px;
-    line-height: 22px;
-    text-transform: uppercase;
-    color: $second-color;
-  }
-}
-
-// Товары
-
-// Сортировка товаров
-.sorting {
-  &__title {
-    font-size: 18px;
-    line-height: 18px;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-
-  &__list {
-    margin: 0;
-    padding: 0;
-
-    list-style: none;
-  }
-
-  &__button {
-    font: inherit;
-
-    font-size: 14px;
-    font-weight: 18px;
-    text-transform: uppercase;
-    color: $main-color;
-  }
-}
-
-// Список товаров
-.product {
-  margin: 0;
-  padding: 0;
-
-  list-style: none;
-
-  &__title {
-    font-size: 18px;
-    line-height: 30px;
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-
-  &__text {
-    font-size: 16px;
-    line-height: 18px;
-    color: #666666;
-  }
-}
-
-// Пагинатор
-.paginator {
-  &__list {
-    margin: 0;
-    padding: 0;
-
-    list-style: none;
-  }
-
-  &__link {
-    font: inherit;
-
-    font-size: 16px;
-    line-height: 18px;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: $main-color;
-
-    background-color: #eeeeee;
-  }
-}
+@import "vars";
+@import "global";
+@import "main";
+@import "catalog";
