--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -20,6 +20,7 @@ body {
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  font-style: normal;
   color: $main-color;
 
   background-color: #439f57;
@@ -87,5 +88,5 @@ h6 {
   margin: 0 auto;
   padding: 0 20px;
   
-  width: 1200px;
+  max-width: 1200px;
 }
