--- a/app/scss/_catalog.scss
+++ b/app/scss/_catalog.scss
@@ -26,13 +26,20 @@
 
 // Фильтр товаров
 .filter {
-  &_wrapper {
+  display: flex;
+  flex-direction: column;
+
+  &__wrapper {
     max-width: 260px;
+    width: 100%;
   }
 
   &__field {
     margin: 0;
     padding: 0;
+
+    display: flex;
+    flex-direction: column;
 
     border: none;
   }
@@ -53,6 +60,8 @@
     line-height: 18px;
     font-weight: 500;
     text-transform: uppercase;
+    text-align: center;
+    vertical-align: middle;
     color: $main-color;
 
     background-color: #eeeeee;
@@ -62,10 +71,18 @@
 
 // Счетчик цены
 .value-range {
+  &__row {
+    display: inline-block;
+  }
+
   &__label {
     line-height: 22px;
     text-transform: uppercase;
     color: $second-color;
+  }
+
+  &__input {
+    max-width: 80px;
   }
 }
 
@@ -124,6 +141,22 @@
     max-width: 360px;
   }
 
+  &__popup {
+    background-color: #eeeeee;
+  }
+
+  &__info {
+    margin: 0 auto;
+
+    max-width: 240px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    text-align: center;
+  }
+
   &__title {
     font-size: 18px;
     line-height: 30px;
@@ -139,6 +172,10 @@
 
 // Пагинатор
 .paginator {
+  &__list {
+    display: flex;
+  }
+
   &__link {
     font: inherit;
 
